# pixel_engine

./: CMakeLists.txt  Engine.hpp  README.md
functional_base/: CMakeLists.txt  FilePath.cpp  FilePath.hpp  FunctionHolder.cpp  FunctionHolder.hpp  GPUAccessables.cpp  GPUAccessables.hpp  GenericAccessables.cpp  GenericAccessables.hpp  Logger.cpp  Logger.hpp  MapBase.hpp  Position.cpp  Position.hpp  ResourceProvider.cpp  ResourceProvider.hpp
gpu/: CMakeLists.txt  GraphicsProcessing.cpp  GraphicsProcessing.hpp  ShaderHandling.cpp  ShaderHandling.hpp  TextureInit.cpp  TextureInit.hpp
gpu/generic_drawables/: BasicRhombus.cpp  BasicRhombus.hpp  CMakeLists.txt  Drawable.cpp  Drawable.hpp  LightSource.cpp  LightSource.hpp  Rectangle.cpp  Rectangle.hpp  ShaderMap.cpp  ShaderMap.hpp  ShaderTexture.cpp  ShaderTexture.hpp  Text.cpp  Text.hpp  Texture.cpp  Texture.hpp  TextureSheet.cpp  TextureSheet.hpp
gpu/specialized_drawables/: CMakeLists.txt  CustomText.cpp  CustomText.hpp  Screen.cpp  Screen.hpp
gui/: CMakeLists.txt
gui/gui_base/: ButtonBase.cpp  ButtonBase.hpp  CMakeLists.txt  TextboxBase.cpp  TextboxBase.hpp
gui/gui_modules/: CMakeLists.txt
gui/gui_modules/button_modules/: ButtonText.cpp  ButtonText.hpp  CMakeLists.txt
gui/gui_modules/textbox_modules/: CMakeLists.txt  TextboxFramed.cpp  TextboxFramed.hpp
input/: CMakeLists.txt  GamepadHandling.cpp  GamepadHandling.hpp  InputBase.cpp  InputBase.hpp  InputHandling.cpp  InputHandling.hpp
shaders/Compiled/DXIL/: AnimatedColor.frag.dxil  BasicRectangle.vert.dxil  BasicTexture.vert.dxil  ColoredRectangle.vert.dxil  ColoredTexture.vert.dxil  LightSource.frag.dxil  RawTriangle.vert.dxil  Texture.vert.dxil  TextureSheet.vert.dxil  TexturedColoredQuad.frag.dxil  TexturedMultipliedQuad.frag.dxil
shaders/Compiled/MSL/: AnimatedColor.frag.msl  BasicRectangle.vert.msl  BasicTexture.vert.msl  ColoredRectangle.vert.msl  ColoredTexture.vert.msl  LightSource.frag.msl  RawTriangle.vert.msl  Texture.vert.msl  TextureSheet.vert.msl  TexturedColoredQuad.frag.msl  TexturedMultipliedQuad.frag.msl
shaders/Compiled/SPIRV/: AnimatedColor.frag.spv  BasicRectangle.vert.spv  BasicTexture.vert.spv  ColoredRectangle.vert.spv  ColoredTexture.vert.spv  LightSource.frag.spv  RawTriangle.vert.spv  Texture.vert.spv  TextureSheet.vert.spv  TexturedColoredQuad.frag.spv  TexturedMultipliedQuad.frag.spv
shaders/Source/: AnimatedColor.frag.hlsl  BasicRectangle.vert.hlsl  ColoredRectangle.vert.hlsl  ColoredTexture.vert.hlsl  LightSource.frag.hlsl  RawTriangle.vert.hlsl  SolidColor.frag.hlsl  Texture.vert.hlsl  TextureSheet.vert.hlsl  TexturedColoredQuad.frag.hlsl  TexturedMultipliedQuad.frag.hlsl
